2000-05-06  Chris Toshok  <toshok@helixcode.com>

	* backend/pas/pas-backend-ldap.c (pas_backend_ldap_load_uri): if a
	port isn't specified in the uri default to 389.

2000-05-06  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c: Made this take a uri through its
	property bag.

2000-05-05  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/Makefile.am: Added e-card-simple.c and
	e-card-simple.h.

	* backend/ebook/e-card-simple.c, backend/ebook/e-card-simple.h:
	New card wrapper class to simplify things.

	* contact-editor/e-contact-editor.c,
	contact-editor/e-contact-editor.h: Changed e-contact-editor to use
	ECardSimple a bit.

2000-05-03  Chris Toshok  <toshok@helixcode.com>

	* gui/component/addressbook.c (control_deactivate): #ifdef
	HAVE_LDAP the ldap specific stuff.
	(null_cb): same.
	(control_activate): same.

2000-05-02  Ettore Perazzoli  <ettore@helixcode.com>

	* backend/ebook/Makefile.am (INCLUDES): Add
	`-I$(top_srcdir)/addressbook/ename'.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* demo/Makefile.am: set G_LOG_DOMAIN.
	* printing/Makefile.am: same.

2000-05-01  Christopher James Lahey  <clahey@helixcode.com>

	* backend/pas/pas-book-factory.c: Add back in the
	CORBA_Object_release.

	* backend/pas/pas-book.c: Properly duplicate and release the
	listener passed to us.

2000-05-01  Christopher James Lahey  <clahey@helixcode.com>

	* backend/pas/pas-backend-file.c, backend/pas/pas-backend-ldap.c:
	Made uri slightly better managed.
	
	* backend/pas/pas-book-factory.c
	(pas_book_factory_process_request): Remove this
	CORBA_Object_release that causes things not to work.  This is just
	a temporary fix until we figure out what's actually wrong.

	* backend/pas/pas-book.c: Fixed a copy and paste error in a warning.
	
2000-05-01  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Switched the subdirs order since backend depends on
	ename.

2000-05-01  Larry Ewing  <lewing@helixcode.com>
