@@ -6,4 +6,5 @@ Makefile.in
 *.lo
 *.la
 evolution-addressbook
+evolution-addressbook.pure
 test-addressbook
